# lampai

./: AGENTS.md  PROJECT.md
.kiro/specs/lamp-cham-ai-backend/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_admin.py  routes_device.py  routes_health.py  routes_voice.py  routes_websocket.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/domain/: commands.py  device_state.py  intents.py
backend/app/infra/: database.py  models.py  websocket_manager.py
backend/app/repositories/: command_repository.py  conversation_repository.py  device_repository.py
backend/app/schemas/: common.py  device.py  voice.py
backend/app/services/: admin_auth_service.py  background_tasks.py  command_service.py  device_service.py  intent_service.py  llm_service.py  music_service.py  stt_service.py  tts_service.py  voice_pipeline.py
backend/static/admin/: index.html
backend/static/test/: index.html
backend/tests/integration/: test_admin_api.py  test_api_device.py  test_command_flow.py  test_websocket.py
backend/tests/unit/: test_admin_auth.py  test_command_builder.py  test_device_state.py  test_domain_models.py  test_intent_parser.py  test_services.py  test_voice_pipeline.py
simulator/: fake_device.py
