[project]
name = "lampai-backend"
version = "0.1.0"
description = "Lamp Chạm AI Backend - XiaoZhi protocol WebSocket server"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.14",
    "uvicorn[standard]==0.34.3",
    "websockets==15.0.1",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.30.0",
    "pydantic-settings==2.9.1",
    "openai==1.82.0",
    "langchain==0.3.25",
    "langchain-openai==0.3.18",
    "python-jose[cryptography]==3.4.0",
    "bcrypt==4.3.0",
    "python-multipart==0.0.20",
    "structlog==25.1.0",
    "alembic==1.15.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.1",
    "hypothesis==6.131.1",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
